			      CHANGES IN markdown VERSION 0.7

BUG FIXES

  o if both the 'file' and 'text' arguments are provided but file = NULL,
  e.g. markdownToHTML(file = NULL, text = ?), markdownToHTML() can throw an
  error indicating the file is invalid (thanks, Tyler Rinker,
  hadley/staticdocs#66)

  o markdownToHTML(text = ?, output = ?) was broken (#54)

			      CHANGES IN markdown VERSION 0.6.5

NEW FEATURES

  o added an argument 'encoding' to markdownToHTML() to specify the
  character encoding of the input markdown file, and the HTML output file is
  always encoded in UTF-8 now (thanks, Kohske Takahashi, #50)

			      CHANGES IN markdown VERSION 0.6.4

NEW FEATURES

  o added 'mathjax_embed' to HTML options for embedding the MathJax
  JavaScript in the HTML document rather than linking to it online. Note the
  JavaScript code is read from the http instead of https MathJax URL.
  Contributed by Henrik Bengtsson.

  o added another vignette to show the HTML output of the original vignette
  (see browseVignettes('markdown'))

  o the default CSS style was tweaked (major changes include: page width is
  at most 800px, more line height, slightly larger fonts, and a different
  syntax highlighting theme)

			      CHANGES IN markdown VERSION 0.6.3

NEW FEATURES

  o added a new argument 'template' to markdownToHTML() so that we can
  customize the HTML template (by default, it uses the template
  'resources/markdown.html' in this package); thanks, Nacho Caballero

  o the options markdown.HTML.stylesheet and markdown.HTML.header used in
  markdownToHTML() can be character vectors (they will be processed by
  paste(x, collapse = '\n')

MAJOR CHANGES

  o the 'text' argument in markdownToHTML() and renderMarkdown() is treated
  as lines of input now, i.e. if 'text' is provided, it is passed to the
  markdown renderer as paste(text, collapse = '\n'); in the previous
  versions, it was processed by paste(text, collapse = '')

			      CHANGES IN markdown VERSION 0.6
