@@ -1,19 +1,19 @@
-0faee42f2643d7aa33ae3c4f251679c5 *DESCRIPTION
+024f209d6e30bb95dd9fb23cf0a41863 *DESCRIPTION
 87a89086a2d7d36513a827338f2168bb *NAMESPACE
-f25c67a6e96ada0df69eccc344818d9d *NEWS
+6ff851eb4508153956bb9be2693c0d53 *NEWS
 0a375621b5466aaa55827331b7a54aba *R/markdown-package.R
-3e4149e489497fe57404309f0c8001c6 *R/renderMarkdown.R
+cfd48af08eb081e57244064333c97f06 *R/renderMarkdown.R
 f4beddae2d040cd09a32acf17c07a312 *R/rpubsUpload.R
 bffe94e0d240c54124633b1922257d80 *README.md
-ee1f9faf2d5ca1f637247c9d1109029a *build/vignette.rds
+31538f247e8f6bdff88b2f2ccc605241 *build/vignette.rds
 603dd5a44125bb3c7f2595c87c048d93 *inst/COPYING
 4907458964894cb1dcc67c4f5690a48b *inst/NOTICE
-ad747820b066281caeee43d787dfdbab *inst/doc/markdown-examples.R
+e175bd5766e4ba763be130e3c24e870c *inst/doc/markdown-examples.R
 29668370a07ca593fad4e953674716cc *inst/doc/markdown-examples.Rmd
-22eb45fc5e01af775b1df28c5b0d33c6 *inst/doc/markdown-examples.html
-75a2ce39d3e57c28d84f0f0fcfb6ffed *inst/doc/markdown-output.R
+882dd5692be6978f54bd706962132261 *inst/doc/markdown-examples.html
+763ac6a0fefc9cf9934b15e1ddcecc2f *inst/doc/markdown-output.R
 09998ddcbdaa092c32cfedd3d12e11a2 *inst/doc/markdown-output.Rmd
-25adcc1ce22678dd059075edfdee11bf *inst/doc/markdown-output.html
+46b4e5a566b8e37ad0d5f08c918945b4 *inst/doc/markdown-output.html
 1aafcce8fa241bbe61ca5e7c9ec3e36b *inst/examples/HTMLOptions.R
 2c5fc44b771406c4fb7e658e14e63fd7 *inst/examples/markdownExtensions.R
 4ba2610d0919031a909bf50306bfc533 *inst/include/autolink.h
@@ -28,7 +28,7 @@ e25f1ac72fe309c072cd9aa836c631a6 *inst/resources/r_highlight.html
 4b247cbe73199cef81b3425e84e747e5 *man/markdown.Rd
 4209a40d9dedbd09e5fe7d316a52f9bf *man/markdownExtensions.Rd
 18fb4874a3cb6ad1abeb4d2d69a888f9 *man/markdownHTMLOptions.Rd
-652946631183466ed3b49f2a505c8c37 *man/markdownToHTML.Rd
+0ceb1e2ef5fbdedc5c6ac1ecd54a75d5 *man/markdownToHTML.Rd
 b9be38cd5674cc285da9e90517a07b38 *man/registeredRenderers.Rd
 6d540e39b40fd20859678b4d1e1c00be *man/renderMarkdown.Rd
 1023e32ef2129d30709ba5a54c4d1637 *man/rendererExists.Rd
@@ -56,6 +56,6 @@ d7c1cac650658c15073aeeecf8117cac *src/markdown.c
 cd51442c3d728d42342e57467dcd5ad5 *src/stack.h
 ecd33756b1689d8da494c69bea7a7ca6 *src/sundown_version.h
 44ebcfa56c4b699099a0b74fd32474f7 *tests/tests.R
-0f8a6f6daf4912d5d11771a342d41ff9 *tests/tests.Rout.save
+9d9cbca6bc20e8f807ec71c191888504 *tests/tests.Rout.save
 29668370a07ca593fad4e953674716cc *vignettes/markdown-examples.Rmd
 09998ddcbdaa092c32cfedd3d12e11a2 *vignettes/markdown-output.Rmd
